# claude-code

./: README.md  pyproject.toml  start_claude_dangerous.sh
.claude/: settings.json
.claude/commands/: .for_loop.md.swp  for_loop.md  hangman.md  todotest.md  while_loop.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
claude_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_servers/: hangman_mcp.py  test_hangman_mcp.py
