[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code"
version = "0.1.0"
description = "Claude Code development environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp"
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black", 
    "flake8",
    "mypy"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true